<resources>
    <string name="app_name">Login&amp;Minigame</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login">Log in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="hello">Hello</string>
    <string name="spin">Spin the Wheel</string>
    <string name="stop">Stop spinning</string>
    <string name="die_date">U are gonna die in </string>
</resources>